# hobnob

./: .gitignore  README.md  main.py  pyproject.toml
examples/: prompt_to_flow.py
hobnob/: __init__.py  core.py  executors.py  generation.py  parsing.py  rendering.py  routers.py
tests/: test_builtin_executors.py  test_executor_registry.py  test_logging_and_retry.py
